test/code/test_bnot_error.out
Hello world!

Fatal error: Unsupported operand types in {{CWD}}/test/code/test_bnot_error.php on line 4
