test/code/test_bnot_error.php
<?php

print "Hello world!\n";
$a = ~array();

print "Dark side!\n";

